Report 2005: Add data
Change-Id: I86da78cc8b828afc6650a67c7d205ca8512f9cad
Signed-off-by: Tibor Frank <tifrank@cisco.com>
(cherry picked from commit b366c098031d995015fea0a56113c29a5fcd9a68)

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -361,6 +361,7 @@
         - 9   # NDRPDR sel
         - 32  # NDRPDR sel ???
         - 33  # NDRPDR sel ???
+        - 39  # NDRPDR sel
         - 40  # NDRPDR sel
 
     plot-vpp-hdrh-lat-2n-clx:
@@ -382,6 +383,7 @@
         - 9   # NDRPDR sel
         - 32  # NDRPDR sel ???
         - 33  # NDRPDR sel ???
+        - 39  # NDRPDR sel
         - 40  # NDRPDR sel
 
     plot-vpp-nfv-2n-clx-mrr:
@@ -796,6 +798,7 @@
         - 9   # NDRPDR sel
         - 32  # NDRPDR sel ???
         - 33  # NDRPDR sel ???
+        - 39  # NDRPDR sel
         - 40  # NDRPDR sel
 
     vpp-performance-changes-2n-dnv-h1:
@@ -1334,6 +1337,7 @@
         - 9   # NDRPDR sel
         - 32  # NDRPDR sel ???
         - 33  # NDRPDR sel ???
+        - 39  # NDRPDR sel
         - 40  # NDRPDR sel
 
     vpp-compare-testbeds-hsw-clx-ref:
@@ -1356,6 +1360,7 @@
         - 9   # NDRPDR sel
         - 32  # NDRPDR sel ???
         - 33  # NDRPDR sel ???
+        - 39  # NDRPDR sel
         - 40  # NDRPDR sel
 
     vpp-compare-testbeds-mrr-ref:
@@ -2311,6 +2316,7 @@
       - 9   # NDRPDR sel
       - 32  # NDRPDR sel ???
       - 33  # NDRPDR sel ???
+      - 39  # NDRPDR sel
       - 40  # NDRPDR sel
       - 12   # MRR
 
